adding scroll view to the app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,16 @@
 <resources>
     <string name="app_name">About Me</string>
     <string name="name">OBAIDA</string>
+    <string name="yellow_star">Yellow star</string>
+    <string name="bio">Hi My name is Abdelrahman.
+    \n\nMy nickname is OBAIDA.
+    \n\nThe most important thing here is to write a long text
+    \nSo that I am going to write any long sentences as you can see here
+    \nOne of my fav things is to learn new thing because I feel like I am alive
+    \n\n And this is a wonderful feeling in fact
+    \n\nOne of my favourite things is to teach people how to live better and now I am trying to write any thing
+    \nAnd all of the words here are totally random so it does not matter if it will be fact or not
+    \n\nAlso now I am trying to practice more on writing faster on the keyboard
+    \n\nIf you reached this part so I wanna say thank you for being so patient and curious
+    \n\nThank you!</string>
 </resources>
