adding Button,Textview,EditText to the screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     \n\nAlso now I am trying to practice more on writing faster on the keyboard
     \n\nIf you reached this part so I wanna say thank you for being so patient and curious
     \n\nThank you!</string>
+    <string name="what_is_your_nick_name">What is your name?</string>
+    <string name="done">Done</string>
 </resources>
